Remove model_dump as it is no longer needed in the quickstart example

--- a/examples/notebooks/quickstart.ipynb
+++ b/examples/notebooks/quickstart.ipynb
@@ -191,12 +191,8 @@
     "    if user_input.lower() in ['/exit', '/quit']:\n",
     "        print('Exiting chat...')\n",
     "        break\n",
-    "\n",
-    "    # Note: The .model_dump() method is ONLY necessary in an ipython notebook.\n",
-    "    # In a normal Python script, you can simply pass the input_schema() run() method like so:\n",
-    "    # response = agent.run(agent.input_schema(chat_message=user_input))\n",
-    "    # The reason for this is unknown to me and I have not been able to find any documentation on it.\n",
-    "    response = agent.run(agent.input_schema(chat_message=user_input).model_dump())\n",
+    "    \n",
+    "    response = agent.run(agent.input_schema(chat_message=user_input))\n",
     "    print(f'Agent: {response.chat_message}')"
    ]
   }
