refactor: Update multi-agent quickstart notebook

--- a/examples/notebooks/multi_agent_quickstart.ipynb
+++ b/examples/notebooks/multi_agent_quickstart.ipynb
@@ -55,7 +55,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -110,7 +110,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -136,7 +136,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 4,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -162,7 +162,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 5,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -192,14 +192,14 @@
         "        break\n",
         "\n",
         "    response = orchestration_agent.run(orchestration_agent.input_schema(chat_message=user_input))\n",
-        "    console.print(f'Agent: {response.chat_message}')\n",
+        "    console.print(f'Agent: {response.response}')\n",
         "\n",
-        "    if isinstance(response.chat_message, searx_agent.input_schema):\n",
+        "    if isinstance(response.response, searx_agent.input_schema):\n",
         "        console.print(f'Using searx agent')\n",
-        "        response = searx_agent.run(response.chat_message)\n",
-        "    elif isinstance(response.chat_message, calc_agent.input_schema):\n",
+        "        response = searx_agent.run(response.response)\n",
+        "    elif isinstance(response.response, calc_agent.input_schema):\n",
         "        console.print(f'Using calc agent')\n",
-        "        response = calc_agent.run(response.chat_message)\n",
+        "        response = calc_agent.run(response.response)\n",
         "\n",
         "    console.print(f'Agent: {response.chat_message}')"
       ]
