For consistent naming, Changed BaseChatResponseSchema to BaseChatInputSchema Changed ResponseSchema to OutputSchema

--- a/examples/notebooks/yelp_agent.ipynb
+++ b/examples/notebooks/yelp_agent.ipynb
@@ -69,7 +69,7 @@
     "\n",
     "from atomic_agents.lib.components.chat_memory import ChatMemory\n",
     "from atomic_agents.lib.components.system_prompt_generator import SystemPromptGenerator, SystemPromptInfo\n",
-    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentResponseSchema, BaseChatAgentConfig\n",
+    "from atomic_agents.agents.base_chat_agent import BaseChatAgent, BaseChatAgentOutputSchema, BaseChatAgentConfig\n",
     "from atomic_agents.lib.tools.yelp_restaurant_finder_tool import YelpSearchTool, YelpSearchToolConfig, YelpSearchToolSchema"
    ]
   },
@@ -194,10 +194,10 @@
    "source": [
     "# Define a custom response schema that can handle both chat responses and Yelp search tool responses\n",
     "class ResponseSchema(BaseModel):\n",
-    "    chosen_schema: Union[BaseChatAgentResponseSchema, YelpSearchToolSchema] = Field(..., description='The response from the chat agent.')\n",
+    "    chosen_schema: Union[BaseChatAgentOutputSchema, YelpSearchToolSchema] = Field(..., description='The response from the chat agent.')\n",
     "\n",
     "    class Config:\n",
-    "        title = 'ResponseSchema'\n",
+    "        title = 'OutputSchema'\n",
     "        description = 'The response schema for the chat agent.'\n",
     "        json_schema_extra = {\n",
     "            'title': title,\n",
@@ -227,7 +227,7 @@
     "        system_prompt_generator=system_prompt_generator,\n",
     "        model='gpt-3.5-turbo',\n",
     "        memory=memory,\n",
-    "        output_schema=ResponseSchema\n",
+    "        output_schema=OutputSchema\n",
     "    )\n",
     ")\n",
     "\n",
