Remove **kwargs usage from anything extending SystemPromptContextProviderBase

--- a/examples/notebooks/youtube_knowledge_extraction.ipynb
+++ b/examples/notebooks/youtube_knowledge_extraction.ipynb
@@ -141,8 +141,8 @@
    "outputs": [],
    "source": [
     "class YtTranscriptProvider(SystemPromptContextProviderBase):\n",
-    "    def __init__(self, **kwargs):\n",
-    "        super().__init__(**kwargs)\n",
+    "    def __init__(self, title):\n",
+    "        super().__init__(title)\n",
     "        self.transcript = None\n",
     "        self.duration = None\n",
     "        self.metadata = None\n",
