Add jsonref to install command for notebook

--- a/examples/notebooks/quickstart.ipynb
+++ b/examples/notebooks/quickstart.ipynb
@@ -41,7 +41,7 @@
    "outputs": [],
    "source": [
     "# Install necessary packages\n",
-    "%pip install atomic-agents openai instructor"
+    "%pip install atomic-agents openai instructor jsonref"
    ]
   },
   {
